// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.pms.contracts.triggers;

option java_multiple_files = true;

import "product/ci/scm/proto/scm_service.proto";

message TriggerPayload {
  ParsedPayload parsedPayload = 2;
  Type type = 3;
  map<string, string> headers = 4;
  SourceType sourceType = 5;
  oneof buildData {
    ArtifactData artifactData = 6;
    ManifestData manifestData = 7;
  }
  int64 version = 8;
  string connectorRef = 9;
}

message ArtifactData {
  string build = 1;
  map<string, string> metadata = 2;
}

message ManifestData {
  string version = 1;
}

message ParsedPayload {
  oneof payload {
    product.ci.scm.proto.PullRequestHook pr = 1;
    product.ci.scm.proto.PushHook push = 2;
    product.ci.scm.proto.ReleaseHook release = 3;
  }
}

enum Type {
  CUSTOM = 0;
  GIT = 1;
  SCHEDULED = 2;
  WEBHOOK = 3;
  ARTIFACT = 4;
  MANIFEST = 5;
}

enum SourceType {
  CUSTOM_REPO = 0;
  GITHUB_REPO = 1;
  GITLAB_REPO = 2;
  BITBUCKET_REPO = 3;
  AWS_CODECOMMIT_REPO = 4;
  AZURE_REPO = 5;
  HARNESS_REPO = 6;
}
